--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,19 @@
     <string name="app_name">WITH</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    <string-array name="sports">
+        <item>篮球</item>
+        <item>足球+</item>
+        <item>羽毛球</item>
+        <item>乒乓球</item>
+        <item>跑步</item>
+        <item>游泳</item>
+        <item>骑行</item>
+    </string-array>
+    <string-array name="incitation">
+        <item>吃饭</item>
+        <item>ktv</item>
+        <item>看电影</item>
+        <item>散步</item>
+    </string-array>
 </resources>
